assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Nova+Square&display=swap");

:root {
  background-color: rgb(29, 26, 26);
}

* {
    margin: 0;
    padding: 0;
    font-family: "Nova Square", cursive;
}


nav {
    display: flex;
    justify-content: center;
    width: 100%;
    height: 10vh;
    padding-top: 20px;
    margin-left: auto;
    margin-right: auto;
    background: linear-gradient(90deg, rgba(0,212,255,1) 14%, rgba(53,41,138,1) 39%);
}

ul {
    display: inline-flex;
    justify-content: space-evenly;
    width: 100%;
    vertical-align: middle;
}

li {
    list-style-type: none;
    line-height: 5.5;
    vertical-align: middle;
}

a { 
    text-decoration: none;
    color: white;
}

a:hover {
    color: #2cd0e2;
}


main { 
    height: 95vh;
}

h1,h2 { 
    margin: auto;
    color: white;
    text-align: center;
    padding-top: 50px;
}

footer { 
    background-color: #221f65;
    height: 6vh;
    color: white;
    text-align: center;
    padding-top: 60px;
    padding-bottom: 50px;
}

button {
    padding-top: 20px;
}

input {
    padding: 10px;
    border-radius: 20px;
}

.sports {
    height: 50vh;
    width: 50%;
    background-color: #221f65;
    margin-left: auto;
    margin-right: auto;
    margin-top: 100px;
    border-radius: 20px;
    text-align: center;
}

.sports-text { 
    color: white;
    padding-top: 30px;
}

.progressbar { 
    width: 20rem;
    height: 1.5rem;
    border: 0.2em solid #2cd0e2;
    margin-left: auto;
    margin-right: auto;
    border-radius: 50px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.about {
    color: white;
}

.about-text { 
    margin-top: 20px;
    padding-top: 60px;
    padding-right: 30px;
    padding-left: 30px;
    text-align: center; 
    display: block;
    height: 20vh;
    width: 50%;
    background-color: #221f65;
    border-radius: 20px;
    margin-left: auto;
    margin-right: auto;
}

.info-box { 
    height: 60vh;
    width: 20%;
    margin: 40px;
    background-color: #35298a;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    border-radius: 50px;
    padding-top: 100px;
}

.info-text {
    text-align: center;
    color: white;
    padding-top: 20px;
}

.container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    justify-items: center;
    margin-left: auto;
    margin-right: auto;
    margin-top: 150px;
}

.box-one {
    height: 35vh;
    width: 70%;
    margin-top: 40px;
    margin-right: 20px;
    background-color: #221f65;
    border-radius: 50px;
}

.box-text {
    text-align: center;
    color: white;
    padding-top: 50px;
}

.myButton {
	box-shadow: 0px 10px 14px -7px #276873;
	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
	background-color:#599bb3;
	border-radius:28px;
	display:inline-block;
	cursor:pointer;
	color:#ffffff;
	font-family:Arial;
	font-size:20px;
	font-weight:bold;
	padding:13px 32px;
	text-decoration:none;
	text-shadow:0px 1px 0px #3d768a;
}

.myButton:hover {
    color: #2cd0e2;
}

.choice-container {
    display: inline-flex;
    padding: 20px;
    background-color: #2cd0e2;
    height: 40px;
    border-radius: 20px;
    margin-top: 20px;
    margin-right: 30px;
    margin-bottom: 20px;
}

.choice-text  {
    padding-top: 10px;
    cursor: pointer;
}

.choice-text:hover {
    color: greenyellow;
}

